apps/lidarr/service-lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr
  name: lidarr
spec:
  ports:
    - name: "8686"
      port: 8686
      targetPort: 8686
  selector:
    app: lidarr
