apps/lidarr/ingress-lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: lidarr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: lidarr
            port:
              number: 8686
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - lidarr.almothana.xyz
      secretName: almothana-xyz-tls
